@@ -1,3 +1,4 @@
+3 July 2025: Add option to set right margin in Charts
 24 June 2025: Show average time per optimization loop
 24 June 2025: Make HighestClose and LowestClose more efficient
 22 June 2025: Add `Time` parameter to load only newer data
